# central-acolhimento

./: README.md  backup.sh  deploy-prod.sh  docker-compose.prod.yml  env.prod  env.prod.example  monitor.sh
.github/workflows/: ci-cd.yml
api-repo/: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  QUICK_START.md  README.md  alembic.ini  coverage.xml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
api-repo/.github/workflows/: ci-cd.yml
api-repo/alembic/: env.py
api-repo/app/: __init__.py  main.py
api-repo/app/api/routers/: contatos.py  health.py
api-repo/app/core/: config.py  database.py
api-repo/app/crud/: __init__.py  contato.py
api-repo/app/models/: __init__.py  contato.py
api-repo/app/schemas/: __init__.py  contato.py
api-repo/app/services/: __init__.py  crud_service.py  llm_integration.py
api-repo/k8s/: central-acolhimento.yaml  grafana.yaml  ingress.yaml  monitoring.yaml
api-repo/llm-repo/: coverage.xml
api-repo/terraform/: main.tf  variables.tf
api-repo/terraform/modules/database/: main.tf  variables.tf
api-repo/terraform/modules/networking/: main.tf  variables.tf
api-repo/tests/: conftest.py
api-repo/tests/integration/: test_api_contatos.py  test_api_health.py
api-repo/tests/unit/: test_crud.py  test_llm_integration.py  test_models.py  test_schemas.py  test_services.py
docs/: STATUS.md
docs/adr/: 0001-multi-repo-architecture.md
llm-repo/: Dockerfile  README.md  docker-compose.yml  env.example  pytest.ini  requirements.txt
monitoring/: prometheus.yml
nginx/: nginx.conf
(+42 files in other folders)
